--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^4.2.1",
-    "clsx": "^1.0.4",
-    "firebase": "^7.6.0",
+    "@material-ui/core": "^4.9.7",
+    "@mdi/js": "^5.0.45",
+    "@mdi/react": "^1.3.0",
+    "clsx": "^1.1.0",
+    "firebase": "^7.12.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.3.0",
-    "recompose": "^0.30.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "^0.0.75"
   },
   "scripts": {
@@ -38,11 +41,12 @@
     ]
   },
   "devDependencies": {
-    "create-react-component-folder": "^0.1.30",
+    "create-react-component-folder": "^0.2.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^3.0.0",
+    "husky": "^4.2.3",
     "prettier": "^1.18.2",
-    "pretty-quick": "^2.0.1"
+    "pretty-quick": "^2.0.1",
+    "redux-devtools": "^3.5.0"
   },
   "husky": {
     "hooks": {
